# ruek

./: .clang-format  .containerignore  .gitignore  CMakeLists.txt  Containerfile  LICENSE  Makefile  NOTICE  README.md  changelog.md
.github/workflows/: build.yaml  ci.yaml  publish.yaml
bench/: CMakeLists.txt  algorithms_test.cpp  main.cpp  relations_test.cpp
cmake/: dependencies.cmake  googleapis.cmake
conf/: app.yaml
datastore/: schema.sql
db/: schema.sql
doc/: er-diagrams.md  schema.md
docs/: README.md  rebac.md
docs/api/: README.md
docs/api/v1/: principals.md  relations.md
docs/assets/: rebac-relations-graph-01.d2  rebac-relations-graph-02.d2  rebac-strand-example.d2
examples/fileshare/: Makefile  README.md  go.mod  go.sum  main.go
examples/fileshare/app/: .eslintrc.yml  .gitignore  index.html  package-lock.json  package.json  vite.config.js
examples/fileshare/app/src/: app.css  app.jsx  busy.css  busy.jsx  file.css  file.jsx  files.css  files.jsx  index.css  index.jsx  new-file.css  new-file.jsx  sign-up.css  sign-up.jsx  users.css  users.jsx
examples/fileshare/pkg/handlers/: handlers.go
examples/fileshare/pkg/handlers/v1/: files.go  files_test.go  testing.go  users.go  users_test.go  utils.go  v1.go
examples/fileshare/pkg/pb/sentium/api/v1/: authz.pb.go  authz_grpc.pb.go  principals.pb.go  principals_grpc.pb.go  resources.pb.go  resources_grpc.pb.go
proto/: CMakeLists.txt
proto/.gen/go/ruekpb/: principals.pb.go  principals_grpc.pb.go  relations.pb.go  relations_grpc.pb.go
proto/gk/v1/: access.proto  collections.proto  common.proto  events.proto  gatekeeper.proto  identities.proto  permissions.proto  rbac.proto  roles.proto
proto/ruek/api/v1/: authz.proto  entities.proto  principals.proto  relations.proto
proto/ruek/detail/: pagination.proto
proto/sentium/api/v1/: authz.proto  entities.proto  principals.proto  relations.proto  resources.proto
proto/sentium/detail/: pagination.proto
protos/: CMakeLists.txt
protos/gk/v1/: gatekeeper.proto
protos/v1/: gatekeeper.proto
src/: CMakeLists.txt  main.cpp
src/datastore/: CMakeLists.txt  access-policies.cpp  access-policies.h  access-policies_test.cpp  collections.cpp  collections.h  collections_test.cpp  config.h  datastore.h  identities.cpp  identities.h  identities_test.cpp  permissions.cpp  permissions.h  permissions_test.cpp  pg.cpp  pg.h  pg_test.cpp  policies.h  rbac-policies.cpp  rbac-policies.h  rbac-policies_test.cpp  redis.cpp  redis.h  redis_test.cpp  roles.cpp  roles.h  roles_test.cpp  testing.h
src/db/: CMakeLists.txt  common.h  config.h  db.h  detail.cpp  detail.h  pg.cpp  pg.h  pg_test.cpp  principals.cpp  principals.h  principals_test.cpp  records.cpp  records.h  records_test.cpp  rng.cpp  rng.h  testing.h  tuples.cpp  tuples.h  tuples_test.cpp  tuplets.cpp  tuplets.h  tuplets_test.cpp
src/encoding/: CMakeLists.txt  b32.h  b32_test.cpp  b64.h  b64_test.cpp
src/err/: CMakeLists.txt  basic_error.h  basic_error_test.cpp  errors.h  fixed_string.h
src/events/: CMakeLists.txt  basic_event.h  concepts.h  events.cpp  events.h  events_test.cpp  publisher.cpp  publisher.h  pubsub-transport.cpp  pubsub-transport.h  pubsub-transport_test.cpp
src/log/: CMakeLists.txt  log.cpp  log.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/service/: CMakeLists.txt  gatekeeper.access-policies.cpp  gatekeeper.access-policies_test.cpp  gatekeeper.collections.cpp  gatekeeper.collections_test.cpp  gatekeeper.cpp  gatekeeper.h  gatekeeper.identities.cpp  gatekeeper.identities_test.cpp  gatekeeper.rbac-policies.cpp  gatekeeper.rbac-policies_test.cpp  gatekeeper.roles.cpp  gatekeeper.roles_test.cpp  gatekeeper_test.cpp  grpc.cpp  grpc.h  grpc_test.cpp  mappers.cpp  mappers.h
src/service/interceptors/: logger.cpp  logger.h
src/svc/: CMakeLists.txt  access.cpp  access.h  access_test.cpp  authz.cpp  authz.h  authz_test.cpp  collections.cpp  collections.h  collections_test.cpp  common.h  entities.cpp  entities.h  entities_test.cpp  events.cpp  events.h  events_test.cpp  identities.cpp  identities.h  identities_test.cpp  permissions.cpp  permissions.h  permissions_test.cpp  principals.cpp  principals.h  principals_test.cpp  rbac.cpp  rbac.h  rbac_test.cpp  relations.cpp  relations.h  relations_test.cpp  resources.cpp  resources.h  resources_test.cpp  roles.cpp  roles.h  roles_test.cpp  svc.h  wrapper.h
src/svc/interceptors/: logger.cpp  logger.h
